--- a/index.css
+++ b/index.css
@@ -1,60 +1,4 @@
-.header {
-    display: flex;
-    border: 1px black solid;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    width: 150;
-    height: 150;
-}
-
-.nav-items > ul {
-    display: flex;
-    list-style-type: none;
-}
-
-.nav-items > ul > li {
-    margin: 12;
-    padding: 4;
-    font-size: large;
-}
-
-.filters {
-    margin: 10;
-}
-
-.filter-item {
-    margin:10;
-}
-
-.res-card {
-    width: 200;
-    padding: 8;
-    margin: 4;
-    margin-right: 10;
-    background-color: #f0f0f0;
-}
-
-.res-card:last-child {
-    margin-right: 0;
-}
-
-.res-card:hover {
-    border: 1px solid black;
-    cursor: pointer;
-}
-
-.res-card-logo {
-    width: 100%;
-    height: 150;
-}
-
-.res-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    margin-left: 35;
-     margin-right: 35;
-}
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+@import "tailwindcss";
